--- a/css/_styles.css
+++ b/css/_styles.css
@@ -34,6 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 185px;
+    box-shadow: 0px 3px 6px #52525229;
 }
 
 .bank-card {
